Minor code simplifications